--- a/thesis/Introduction.lyx
+++ b/thesis/Introduction.lyx
@@ -346,7 +346,7 @@ Third Part : Implementation and Tests
 \begin_layout Standard
 This part contains the different steps of implementation of our retrieval
  system.
- It includes chapters:
+ It includes one chapter:
 \end_layout
 
 \begin_layout Standard
