--- a/thesis/Conception.lyx
+++ b/thesis/Conception.lyx
@@ -30,7 +30,7 @@ initials
 \font_tt_scale 100
 
 \graphics default
-\default_output_format default
+\default_output_format pdf4
 \output_sync 1
 \output_sync_macro "\synctex=1"
 \bibtex_command default
