--- a/thesis/Co - Features.lyx
+++ b/thesis/Co - Features.lyx
@@ -31,7 +31,7 @@ endnotes
 \font_tt_scale 100
 
 \graphics default
-\default_output_format default
+\default_output_format pdf4
 \output_sync 0
 \bibtex_command default
 \index_command default
@@ -792,7 +792,7 @@ status open
 Trying to resolve these problems as a generic Arabic problem is really hard
  since it hasn’t linguistic resources to make strict lexical analyzers
 \begin_inset Note Note
-status open
+status collapsed
 
 \begin_layout Plain Layout
 ref:Arabic google the phrase
@@ -2608,6 +2608,45 @@ could be written as ẖalīfaẗ (ISO233), xalyfap (Buckwalter), _halyfaT (Arabt
 \end_layout
 
 \begin_deeper
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename figures/Romanization_examples_extended.png
+	scale 50
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Different romanizations for the word 
+\lang arabic_arabi
+خَليفَة
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Standard
 \begin_inset Float figure
 wide false
