--- a/thesis/SA - Quran.lyx
+++ b/thesis/SA - Quran.lyx
@@ -941,6 +941,13 @@ Explanatory diagram of fragmentation into Hizbs
 
 \begin_layout Subsection
 Fragmentation into Stops (Waqfs)
+\begin_inset CommandInset label
+LatexCommand label
+name "sub:Fragmentation-into-Stops"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
